--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lib-flexible": "^0.3.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.2.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
