--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.2.6",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
