feat：首页-金刚区

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.0.0-beta.6",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
