--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "normalize.css": "^8.0.1",
     "vant": "^2.5.5",
     "vue": "^2.6.11",
+    "vue-content-loader": "^0.2.3",
     "vue-router": "^3.1.5",
     "vue-scrollto": "^2.17.1",
     "vuex": "^3.1.2"
