--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.13.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-px-to-viewport": "^1.1.1",
