--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/Ewall1106/mall"
   },
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -27,6 +28,7 @@
     "normalize.css": "^8.0.1",
     "vant": "^2.5.5",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-content-loader": "^0.2.3",
     "vue-router": "^3.1.5",
     "vue-scrollto": "^2.17.1",
