--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "node-sass": "^4.14.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-px-to-viewport": "^1.1.1",
+    "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "svg-sprite-loader": "^4.2.1",
     "svgo": "^1.3.2",
