--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
+    "uuid": "^8.3.0",
     "vant": "^2.5.5",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
