--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "js-cookie": "^2.2.1",
+    "nanoid": "^3.1.16",
     "normalize.css": "^8.0.1",
     "uuid": "^8.3.0",
     "vant": "^2.5.5",
