--- a/mall3.0/package.json
+++ b/mall3.0/package.json
@@ -32,6 +32,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "postcss": "^8.2.3",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
