--- a/mall3.0/package.json
+++ b/mall3.0/package.json
@@ -21,7 +21,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.1.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "vant": "^3.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/js-cookie": "^2.2.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
