--- a/mall3.0/.prettierrc
+++ b/mall3.0/.prettierrc
@@ -4,5 +4,6 @@
     "semi": false,
     "singleQuote": true,
     "bracketSpacing": true,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "arrowParens": "avoid"
 }
