--- a/mall3.0/tsconfig.json
+++ b/mall3.0/tsconfig.json
@@ -21,6 +21,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "src/**/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx",
     "src/**/**/*.ts"
