--- a/mall3.0/package.json
+++ b/mall3.0/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^24.0.19",
     "@types/js-cookie": "^2.2.6",
     "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/babel-plugin-jsx": "^1.0.2",
@@ -48,6 +49,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.0",
     "ts-import-plugin": "^1.6.7",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
