--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "postcss": "^8.2.3",
     "postcss-preset-env": "^6.7.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
