--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panda-mall",
+  "name": "Vue-H5-Template",
   "version": "2.0.3",
   "author": "Ewall&熊猫",
   "scripts": {
@@ -7,62 +7,71 @@
     "mock": "cross-env NODE_ENV=mock vue-cli-service serve",
     "local": "cross-env NODE_ENV=local vue-cli-service serve",
     "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "cross-env NODE_ENV=development vue-cli-service lint",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "@better-scroll/core": "^2.0.0-beta.6",
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "js-cookie": "^2.2.1",
-    "nanoid": "^3.1.16",
+    "@better-scroll/core": "^2.4.2",
+    "axios": "^0.24.0",
+    "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
+    "nanoid": "^3.1.30",
     "normalize.css": "^8.0.1",
-    "uuid": "^8.3.0",
-    "vant": "^2.5.5",
+    "vant": "^2.12.36",
     "vue": "^2.6.11",
-    "vue-clipboard2": "^0.3.1",
-    "vue-content-loader": "^0.2.3",
-    "vue-router": "^3.1.5",
-    "vue-scrollto": "^2.17.1",
-    "vuex": "^3.1.2"
+    "vue-clipboard2": "^0.3.3",
+    "vue-content-loader": "0.2.3",
+    "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.4",
-    "@vue/cli-plugin-eslint": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-import": "^1.13.0",
-    "cross-env": "^7.0.2",
+    "babel-plugin-import": "^1.13.3",
+    "compression-webpack-plugin": "^6.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "postcss-preset-env": "^6.7.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "postcss-px-to-viewport": "^1.1.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
-    "svg-sprite-loader": "^4.2.1",
-    "svgo": "^1.3.2",
+    "prettier": "^2.2.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo": "^2.8.0",
     "vue-template-compiler": "^2.6.11"
   },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "@vue/prettier"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "eslintIgnore": [
+    "src/assets",
+    "public",
+    "dist"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "keywords": [
-    "vue",
-    "vue-template",
-    "panda-vue-template",
-    "panda-mall"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ewall1106/mall"
-  }
+  ]
 }
