--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "filemanager-webpack-plugin": "^6.1.7",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "postcss-px-to-viewport": "^1.1.1",
