--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "author": "Ewall&熊猫",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vue-cli-service serve",
-    "mock": "cross-env NODE_ENV=mock vue-cli-service serve",
+    "serve": "cross-env NODE_ENV=development vue-cli-service serve",
     "local": "cross-env NODE_ENV=local vue-cli-service serve",
     "build": "cross-env NODE_ENV=production vue-cli-service build",
     "lint": "cross-env NODE_ENV=development vue-cli-service lint",
+    "publish": "cross-env NODE_ENV=publish vue-cli-service build",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
