--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,10 +1,19 @@
-name: website2
+name: Deploy-Gh-Pages
 
-on: push
+on:
+  push:
+    branches: [2.x]
+  pull_request:
+    branches: [2.x]
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Git Source
+        uses: actions/checkout@v2
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -13,6 +22,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: public
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
