--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -2,9 +2,9 @@ name: Deploy-Gh-Pages
 
 on:
   push:
-    branches: [dev_2.x]
+    branches: [2.x]
   pull_request:
-    branches: [dev_2.x]
+    branches: [2.x]
 
 jobs:
   build:
