--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "cross-env NODE_ENV=development vue-cli-service serve",
     "serve": "cross-env NODE_ENV=development vue-cli-service serve",
     "local": "cross-env NODE_ENV=local vue-cli-service serve",
-    "build": "cross-env NODE_ENV=production COMPRESS=true vue-cli-service build",
+    "build": "cross-env NODE_ENV=production COMPRESS=false vue-cli-service build",
     "lint": "cross-env NODE_ENV=development vue-cli-service lint",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
