--- a/package.json
+++ b/package.json
@@ -3,26 +3,17 @@
   "version": "2.0.3",
   "author": "danielxiong<ewall1106@gmail.com>",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vue-cli-service serve",
-    "serve": "cross-env NODE_ENV=development vue-cli-service serve",
-    "local": "cross-env NODE_ENV=local vue-cli-service serve",
-    "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "lint": "cross-env NODE_ENV=development vue-cli-service lint",
-    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "dev": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@better-scroll/core": "^2.4.2",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "js-cookie": "^3.0.1",
-    "nanoid": "^3.1.30",
     "normalize.css": "^8.0.1",
-    "vant": "^2.12.36",
     "vue": "^2.6.11",
-    "vue-clipboard2": "^0.3.3",
-    "vue-content-loader": "0.2.3",
     "vue-router": "^3.2.0",
-    "vue-scrollto": "^2.20.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -34,20 +25,15 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "^6.1.1",
-    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "filemanager-webpack-plugin": "^6.1.7",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "svg-sprite-loader": "^6.0.11",
-    "svgo": "^2.8.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
