--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "mockjs": "^1.1.0",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
