--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vue-H5-Template",
+  "name": "vue-h5-template",
   "version": "2.0.3",
   "author": "danielxiong<ewall1106@gmail.com>",
   "scripts": {
